--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 body{
     padding: 0px;
     margin: 0px;
+    font-family: 'Barlow', sans-serif;
 }
 
 .main{
@@ -17,6 +18,33 @@ body{
     transform: translate(-50%,-50%);
 }
 
+.holder p{
+    font-size: 16px;
+    font-weight: 200;
+    text-align: center;
+}
+
+a{
+    color: #114411;
+}
+
+.holder h1{
+    font-weight: 400;
+    font-size: 32px;
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.download-notification{
+    font-size: 10px;
+    position: relative;
+    left: 50%;
+    text-align: center;
+    transform: translateX(-50%);
+    margin-bottom: 40px;
+    color: #141414;
+}
+
 input:focus{
     outline: none;
 }
@@ -27,7 +55,6 @@ input:focus{
     max-width: 600px;
     border:2px solid #141414;
     font-size: 16px;
-    font-family: 'Barlow', sans-serif;
     font-weight: 200;
     color:#444444;
     text-align: center;
